src/main/java/com/example/zadanie0202/github/error/NotAcceptableFormat.java
package com.example.zadanie0202.github.error;

public class NotAcceptableFormat extends RuntimeException{

    public NotAcceptableFormat (String message) {
        super(message);
    }
}
